--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8"> 
     <title>Music Hearing Test</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
